# Reward.PUMP

./: .gitignore  Cargo.toml  README.md  Reward.pump Project Plan.MD  package.json
migrations/: deploy.ts
programs/reward_pump/: Cargo.toml
programs/reward_pump/src/: errors.rs  lib.rs  state.rs
programs/reward_pump/src/instructions/: distribute.rs  initialize.rs
scripts/: config.ts  distribute.ts  fetch_holders.ts
