[package]
name = "reward-pump"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.28.0"
anchor-spl = "0.28.0"
solana-program = "1.16.0"
spl-token = { version = "4.0.0", features = ["no-entrypoint"] }
thiserror = "1.0.40"

[dev-dependencies]
solana-program-test = "1.16.0"
solana-sdk = "1.16.0"